# Axiom-Protocol

./: .gitignore  AXIOM_NETWORK_SYNC.md  BOOTSTRAP_DEPLOYMENT.md  COMPREHENSIVE_STATUS_REPORT.md  Cargo.toml  DEPLOYMENT_GUIDE.md  E0425_ANALYSIS_RESULTS.md  E0425_DIAGNOSIS_GUIDE.md  FINAL_VERIFICATION_REPORT.md  MAINNET-LAUNCH-SUMMARY.md  MAINNET_DEPLOYMENT_CHECKLIST.md  MAINNET_LAUNCH.md  ONNX_USAGE.md  OPENCLAW_AGENT_STARTUP.md  PROJECT_COMPLETION_REPORT.md  README.md  RELEASE_NOTES_v2.2.1.md  SECURITY_AUDIT.md  TECHNICAL_DOCUMENTATION.md  WHITEPAPER.md  auto-provision-aws.sh  axiom-validator.service  axiom-validator.toml  backup-validator.sh  check-validator.sh  complete_fix_v2.sh  connect_to_bootstrap.sh  deploy-validator.sh  deployment-info.txt  diagnose_e0425.sh  e0425_analyzer.sh  launch-demo.sh  mainnet-status.json  provision-servers.sh  start-validator.sh  stop-validator.sh  validator-firewall.sh  verify_agents.sh
ceremony-logs/: transcript-3b24ebf8325db71d.txt
config/: bootstrap.toml
demo-validator-1/: axiom-validator.toml
demo-validator-2/: axiom-validator.toml
demo-validator-3/: axiom-validator.toml  genesis.json
demo-validator-4/: axiom-validator.toml
demo-validator-5/: axiom-validator.toml
docs/: NETWORK_PROTOCOL.md
explorer/: Cargo.toml
explorer-backend/: Cargo.toml  README.md
explorer-backend/src/: main.rs
explorer-frontend/: README.md  package.json
explorer-frontend/public/: index.html
explorer-frontend/src/: App.js  index.css
explorer-frontend/src/components/: Search.js
explorer-frontend/src/pages/: AddressDetail.js  BlockDetail.js  BlocksList.js  Dashboard.js  TransactionDetail.js
explorer/src/: main.rs
keys/: verification_key.json
monitoring/prometheus/validators/: axiom-validator-1.yml
sdk/: README.md
sdk/javascript/: README.md  package.json  qubit-sdk.js
sdk/python/: README.md  qubit_sdk.py  setup.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
src/: ai_engine.rs  block.rs  chain.rs  config.rs  economics.rs  economics_v1_84m.rs.bak  genesis.rs  lib.rs  main.rs  mempool.rs  network.rs  neural_guardian.rs  openclaw_integration.rs  state.rs  time.rs  vdf.rs  zk.rs
src/ai/: oracle.rs
src/bridge/: cross_chain.rs
src/consensus/: lwma.rs  mod.rs
src/crypto/: mod.rs  quantum_safe_stark.rs  quantum_signatures.rs
src/privacy/: view_keys.rs
src/zk/: circuit.rs  transaction_circuit.rs
tests/: integration_tests.rs  test_integration.rs
zk-setup/: README.md  ceremony.sh  download-keys.sh  verification_key.json
