[package]
name = "qubit-core"
version = "1.0.0"
edition = "2021"
description = "Governance-free decentralized Timechain with VDF+PoW Hybrid Consensus"
publish = false # Ensures identity remains private and code isn't leaked to registries

[dependencies]
# Networking (Hardened P2P)
libp2p = { version = "0.53", features = ["macros", "gossipsub", "mdns", "kad", "identify", "tcp", "tokio", "noise", "yamux", "dns", "request-response"] }
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization & Identity
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
async-trait = "0.1"
hex = "0.4"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }

# Cryptography & ZK-Pass
ed25519-dalek = "2.1"
sha2 = "0.10"
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = { version = "0.4.0", features = ["derive"] }
ark-std = "0.4.0"

# Storage
sled = "0.34" # Embedded database for self-healing chain storage

[profile.release]
opt-level = 3            # Maximum speed for VDF loops
lto = "fat"              # Full Link-Time Optimization for cross-crate speed
codegen-units = 1        # Better optimization at the cost of slower compile time
panic = "abort"          # Smaller binary and faster execution
strip = "symbols"        # Minimizes binary size and obscures internals

[[bin]]
name = "qubit"
path = "src/main.rs"

[[bin]]
name = "qubit-wallet"
path = "src/bin/qubit-wallet.rs"
