[package]
name = "axiom-core"
version = "2.0.0"
edition = "2021"
authors = ["AXIOM Protocol Team"]
description = "Decentralized 84M Layer-1 Blockchain with ZK-SNARKs, VDF Consensus, and Neural Guardian AI"
license = "MIT"
repository = "https://github.com/joker00099/Axiom-Protocol"
homepage = "https://axiom.network"
documentation = "https://docs.axiom.network"
readme = "README.md"
keywords = ["blockchain", "cryptocurrency", "zk-snarks", "vdf", "consensus"]
categories = ["cryptography", "network-programming"]
default-run = "axiom"

[dependencies]
once_cell = "1.19"
# AI/ML Framework
onnxruntime = "0.0.14"
ndarray = "0.15"
dirs = "5.0"
# Web server for health/metrics endpoints
actix-web = "4.4"
actix-rt = "2.9"
# Wesolowski VDF (Big Integer Support)
rug = "1.20"
# Networking (Hardened P2P)
libp2p = { version = "0.54", features = ["macros", "gossipsub", "mdns", "kad", "identify", "tcp", "tokio", "noise", "yamux", "dns", "request-response"] }
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization & Identity
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
toml = "0.8"
async-trait = "0.1"
hex = "0.4"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }

# Cryptography & ZK-Pass
ed25519-dalek = "2.1"
sha2 = "0.10"
ark-bls12-381 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-relations = { version = "0.5", default-features = false, features = [] }
ark-snark = "0.5"
ark-groth16 = "0.5"

ark-serialize = { version = "0.5", features = ["derive"] }
ark-std = "0.5"
# Add Arkworks R1CS gadgets for ZK circuits
ark-r1cs-std = { version = "0.5", default-features = false }
ark-bn254 = "0.5"  # BN254 curve for Groth16 ZK proofs

# Storage
sled = "0.34" # Embedded database for self-healing chain storage

# VDF dependencies
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# AI Oracle dependencies (Claude API integration)
reqwest = { version = "0.11", features = ["json"] }

# Production dependencies
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
num_cpus = "1.16"
chrono = "0.4"
log = "0.4.29"

[profile.release]
opt-level = 3            # Maximum speed for VDF loops
lto = "fat"              # Full Link-Time Optimization for cross-crate speed
codegen-units = 1        # Better optimization at the cost of slower compile time
panic = "abort"          # Smaller binary and faster execution
strip = "symbols"        # Minimizes binary size and obscures internals

[[bin]]
name = "axiom"
path = "src/main.rs"

[[bin]]
name = "axiom-wallet"
path = "src/bin/axiom-wallet.rs"

[[bin]]
name = "axiom-supply"
path = "src/bin/axiom-supply.rs"

[[bin]]
name = "trusted-setup"
path = "src/bin/trusted-setup.rs"

[[bin]]
name = "axiom-keygen"
path = "src/bin/axiom-keygen.rs"

[[bin]]
name = "axiom-healthcheck"
path = "src/bin/axiom-healthcheck.rs"
