[package]
name = "qubit-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Qubit Protocol Team"]
description = "Rust SDK for interacting with the Qubit blockchain"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
